added meta (theme-color)

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,6 +16,7 @@
       property="og:image"
       content="https://cdn.discordapp.com/attachments/790205479732641802/899315407607967805/nyarch.png"
     />
+    <meta name="theme-color" content="#eceff4" />
 
     <link
       rel="icon"
