--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= productName %></title>
-
     <meta charset="utf-8" />
     <meta name="description" content="<%= productDescription %>" />
     <meta name="format-detection" content="telephone=no" />
@@ -12,10 +10,49 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
+    <!-- Primary Meta Tags -->
+    <title>XelphLinux | An Arch based Linux distribution</title>
+    <meta
+      name="title"
+      content="XelphLinux | An Arch based Linux distribution"
+    />
+    <meta
+      name="description"
+      content="XelphLinux is a Linux distribution based on Arch."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aakash.is-a.dev/" />
+    <meta
+      property="og:title"
+      content="XelphLinux | An Arch based Linux distribution"
+    />
+    <meta
+      property="og:description"
+      content="XelphLinux is a Linux distribution based on Arch."
+    />
     <meta
       property="og:image"
       content="https://cdn.discordapp.com/attachments/790205479732641802/899315407607967805/nyarch.png"
     />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://aakash.is-a.dev/" />
+    <meta
+      property="twitter:title"
+      content="XelphLinux | An Arch based Linux distribution"
+    />
+    <meta
+      property="twitter:description"
+      content="XelphLinux is a Linux distribution based on Arch."
+    />
+    <meta
+      property="twitter:image"
+      content="https://cdn.discordapp.com/attachments/790205479732641802/899315407607967805/nyarch.png"
+    />
+
     <meta name="theme-color" content="#eceff4" />
 
     <link
