meta theme color changed

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -53,7 +53,7 @@
       content="https://cdn.discordapp.com/attachments/790205479732641802/899315407607967805/nyarch.png"
     />
 
-    <meta name="theme-color" content="#eceff4" />
+    <meta name="theme-color" content="#4c566a" />
 
     <link
       rel="icon"
